[FIX] - Fix added to dark mode

--- a/resources/sass/dark.scss
+++ b/resources/sass/dark.scss
@@ -1,7 +1,7 @@
 @import './variables';
 
 .dark-theme {
-  background-color: $dark-bg;
+  background-color: $dark-bg !important;
   color: $dark-text;
 
   #header {
